Finish feature/EP-1_Add_ansible_checkout_run_to_Jenkinsfile
* 8b90b88	2019-05-18 09:58	<chris.grudzinski@ensighten.com>	Modified to just pass in working directory to ansible.
* af59db4	2019-05-18 09:13	<chris.grudzinski@ensighten.com>	Fixed typo.
* 87428b2	2019-05-18 09:05	<chris.grudzinski@ensighten.com>	Updated Jenkinsfile to pass source dir as ansible extra-var, and added todo package.
* 6a40e5e	2019-05-16 09:24	<chris.grudzinski@ensighten.com>	Added ansible command to Jenkinsfile deploy.
* 1ba0d52	2019-05-16 09:24	<chris.grudzinski@ensighten.com>	Added ansible command to Jenkinsfile deploy.
* b4e8f65	2019-05-13 14:25	<chris.grudzinski@ensighten.com>	Added playbook execution.
* ddb9507	2019-05-13 13:15	<chris.grudzinski@ensighten.com>	Fixed playbook argument in Jenkinsfile.
* 6c58dde	2019-05-13 13:03	<chris.grudzinski@ensighten.com>	Commented out potentially problematic lines.
* 66e28ad	2019-05-12 19:02	<chris.grudzinski@ensighten.com>	Fixed string syntax errors.
* cb13d91	2019-05-12 18:54	<chris.grudzinski@ensighten.com>	Removed double quote.
* 1dc6b63	2019-05-12 18:52	<chris.grudzinski@ensighten.com>	Fixed typo.
* 92eaa82	2019-05-12 18:51	<chris.grudzinski@ensighten.com>	Added conditional fallback to Jenkinsfile...
* 68cdef2	2019-05-12 17:26	<chris.grudzinski@ensighten.com>	Added initial checkout w/ branch specifier.

--- a/src/document.tex
+++ b/src/document.tex
@@ -1,6 +1,8 @@
 \documentclass[12pt]{article}
 \usepackage{lingmacros}
 \usepackage{tree-dvips}
+\usepackage{todo}
+
 \begin{document}
 
 \section*{Notes for My Paper}
